--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>組員 林德昌</section>
+				<section>颱風租屋網 ppt</section>
 			</div>
 		</div>
 
